--- a/src/components/Layout/AppLayout.module.scss
+++ b/src/components/Layout/AppLayout.module.scss
@@ -1,5 +1,6 @@
 .mainWrapper {
   display: flex;
+  overflow-x: clip;
 }
 
 .main {
